--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,2 @@
 NODE_ENV=/src
-REACT_APP_BASE_URL= http://192.168.0.117:8080/api
-REACT_APP_JWT_KEY=jwt
-REACT_APP_REFRESH_KEY = refresh_token
-REACT_APP_USER_KEY=XsQqru6N6o
+REACT_APP_BASE_URL= https://api.opencourse.club/api/chart
